[package]
name = "mandel-mt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.23.14"
num-complex = "0.4.2"
rayon = "1.5.3"
hsl = "0.1.1"
simple-easing = "1.0.0"
clap = { version = "3.2.20", features = ["derive"] }
